k8-developments/rms-deployment/rms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: aupp-rms-service
spec:
  selector:
    app: aupp-rms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
